--- a/projects/index.html
+++ b/projects/index.html
@@ -2,4 +2,6 @@
 layout: project
 ---
 
-<p>Coming soonComing soonComing soonComing soonComing soonComing soonComing soonComing soonComing soonComing soonComing soonComing soonComing soonComing soonComing soonComing soonComing soonComing soonComing soonComing soonComing soonComing soonComing soonComing soonComing soonComing soonComing soonComing soonComing soonComing soonComing soonComing soonComing soonComing soonComing soonComing soonComing soon</p>
+<section id="streamify" class="project">
+  <h1>Streamify</h1>
+</section>
