--- a/projects/index.html
+++ b/projects/index.html
@@ -1,7 +1,57 @@
 ---
 layout: project
 ---
+<script type="text/javascript">
+  $(window).load(function() {
+    $('.flexslider').flexslider({
+      animation: "slide"
+    });
+  });
+</script>
 
 <section id="streamify" class="project">
-  <h1>Streamify</h1>
+  <header><h1>Streamify</h1></header>
+  <article>
+    <p>Streamify is an iOS audio live broadcasting application. It allows users to host their own radio shows and choose to broadcast them to either friends or public audience. Using the app, users can stream the music directly from their iPads library, overlay with their voice and add some special sound effects to the stream. Listeners can tune in any channel to enjoy the shows and interact with the DJs through chat room. Everything happens in near real-time.
+    </p>
+  </article>
+  <aside class="tech">Tech: <span class="label label-info">iOS</span> 
+               <span class="label label-info">PHP</span>
+               <span class="label label-info">HTTP Live Streaming</span>
+  </aside>
+  <div class="flexslider">
+    <ul class="slides">
+      <li>
+        <img src="/img/Streamify-1.PNG" />
+      </li>
+       <li>
+        <img src="/img/Streamify-2.PNG" />
+      </li>
+       <li>
+        <img src="/img/Streamify-3.PNG" />
+      </li>
+       <li>
+        <img src="/img/Streamify-4.PNG" />
+      </li>
+       <li>
+        <img src="/img/Streamify-5.PNG" />
+      </li>
+       <li>
+        <img src="/img/Streamify-6.PNG" />
+      </li>
+       <li>
+        <img src="/img/Streamify-7.PNG" />
+      </li>
+    </ul>
+  </div>
+</section>
+
+<section id="cookiejar" class="project">
+  <header><h1>CookieJar</h1></header>
+  <article>
+    <p>Cookie Jar is a ToDo Manager, which helps users keep track of the upcoming events/school deadlines/tasks. The product’s audience is savvy computer users who prefer working only with keyboard. It supports flexible input commands from the user. For example, users can type “add having a meeting next Friday afternoon” into the command bar; then the program will understand and add the correct event into its database. Other functionalities like smart searching or editing an event are also supported. 
+    </p>
+  </article>
+  <aside class="tech">Tech: <span class="label label-info">Java</span>
+  </aside>
 </section>
