Alt text for images

--- a/projects/index.html
+++ b/projects/index.html
@@ -22,25 +22,25 @@ layout: project
   <div class="flexslider">
     <ul class="slides">
       <li>
-        <img src="/img/Streamify-1.PNG" />
+        <img src="/img/Streamify-1.PNG" alt="Streamify Loading Screen"/>
       </li>
        <li>
-        <img src="/img/Streamify-2.PNG" />
+        <img src="/img/Streamify-2.PNG" alt="Favourite View"/>
       </li>
        <li>
-        <img src="/img/Streamify-3.PNG" />
+        <img src="/img/Streamify-3.PNG" alt="Chat Room"/>
       </li>
        <li>
-        <img src="/img/Streamify-4.PNG" />
+        <img src="/img/Streamify-4.PNG" alt="Broadcast"/>
       </li>
        <li>
-        <img src="/img/Streamify-5.PNG" />
+        <img src="/img/Streamify-5.PNG" alt="Playlist Management"/>
       </li>
        <li>
-        <img src="/img/Streamify-6.PNG" />
+        <img src="/img/Streamify-6.PNG" alt="Search"/>
       </li>
        <li>
-        <img src="/img/Streamify-7.PNG" />
+        <img src="/img/Streamify-7.PNG" alt="Logo"/>
       </li>
     </ul>
   </div>
