--- a/projects/index.html
+++ b/projects/index.html
@@ -9,6 +9,17 @@ layout: project
   });
 </script>
 
+<section id="appman" class="project">
+  <header><h1>AppMan</h1></header>
+  <article>
+    <p>AppMan is one of the projects during my summer internship at <a href="http://viki.com">Viki</a>. It is a secured web-interfaced CMS running on the existing database. AppMan is in charge of managing all applications using Viki APIs. It helps the developers to register, manage and gain accesses to Viki services for their own applications. Moreover, it brings an easy way for Viki staffs to manage both internal and external applications across the system.</br>
+    The website can be found here: <a href="https://appman.viki.io">https://appman.viki.io</a>
+    </p>
+  </article>
+  <aside class="tech">Tech: <span class="label label-info">Ruby on Rails</span>
+  </aside>
+</section>
+
 <section id="streamify" class="project">
   <header><h1>Streamify</h1></header>
   <article>
