--- a/projects/index.html
+++ b/projects/index.html
@@ -17,6 +17,7 @@ layout: project
     </p>
   </article>
   <aside class="tech">Tech: <span class="label label-info">Ruby on Rails</span>
+                            <span class="label label-info">PostgresSQL</span>
   </aside>
 </section>
 
