Add images for CookieJar

--- a/projects/index.html
+++ b/projects/index.html
@@ -63,4 +63,23 @@ layout: project
   </article>
   <aside class="tech">Tech: <span class="label label-info">Java</span>
   </aside>
+  <div class="flexslider">
+    <ul class="slides">
+      <li>
+        <img src="/img/CookieJar-1.PNG" alt="Add"/>
+      </li>
+       <li>
+        <img src="/img/CookieJar-2.PNG" alt="Display"/>
+      </li>
+       <li>
+        <img src="/img/CookieJar-3.PNG" alt="Edit"/>
+      </li>
+       <li>
+        <img src="/img/CookieJar-4.PNG" alt="Delete"/>
+      </li>
+      <li>
+        <img src="/img/CookieJar-5.PNG" alt="Find"/>
+      </li>
+    </ul>
+  </div>
 </section>
