Fix bug of wrong file extension

--- a/projects/index.html
+++ b/projects/index.html
@@ -66,19 +66,19 @@ layout: project
   <div class="flexslider">
     <ul class="slides">
       <li>
-        <img src="/img/CookieJar-1.PNG" alt="Add"/>
+        <img src="/img/CookieJar-1.png" alt="Add"/>
       </li>
        <li>
-        <img src="/img/CookieJar-2.PNG" alt="Display"/>
+        <img src="/img/CookieJar-2.png" alt="Display"/>
       </li>
        <li>
-        <img src="/img/CookieJar-3.PNG" alt="Edit"/>
+        <img src="/img/CookieJar-3.png" alt="Edit"/>
       </li>
        <li>
-        <img src="/img/CookieJar-4.PNG" alt="Delete"/>
+        <img src="/img/CookieJar-4.png" alt="Delete"/>
       </li>
       <li>
-        <img src="/img/CookieJar-5.PNG" alt="Find"/>
+        <img src="/img/CookieJar-5.png" alt="Find"/>
       </li>
     </ul>
   </div>
