--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@ layout: default
 ---
 
 {% for post in paginator.posts %}
-  <div class="row-fluid">
+  <div class="row-fluid blog-post">
     <div class="span12">
-      <h2>{{ post.title }}</h2>
+      <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
       <h4>{{ post.date | date_to_long_string }}</h4>
-      <p>
-        <a href="{{ post.url }}">Read Post</a>
-      </p>
+      <p><i>{{ post.description }} ..</i></p>
     </div>
   </div>
 {% endfor %}
