Add images again

--- a/projects/index.html
+++ b/projects/index.html
@@ -34,22 +34,22 @@ layout: project
   <div class="flexslider">
     <ul class="slides">
       <li>
-        <img src="/img/Streamify-1.PNG" alt="Streamify Loading Screen"/>
+        <img src="/img/Streamify-1.jpg" alt="Streamify Loading Screen"/>
       </li>
        <li>
-        <img src="/img/Streamify-2.PNG" alt="Favourite View"/>
+        <img src="/img/Streamify-2.jpg" alt="Favourite View"/>
       </li>
        <li>
-        <img src="/img/Streamify-3.PNG" alt="Chat Room"/>
+        <img src="/img/Streamify-3.jpg" alt="Chat Room"/>
       </li>
        <li>
-        <img src="/img/Streamify-4.PNG" alt="Broadcast"/>
+        <img src="/img/Streamify-4.jpg" alt="Broadcast"/>
       </li>
        <li>
-        <img src="/img/Streamify-5.PNG" alt="Playlist Management"/>
+        <img src="/img/Streamify-5.jpg" alt="Playlist Management"/>
       </li>
        <li>
-        <img src="/img/Streamify-6.PNG" alt="Search"/>
+        <img src="/img/Streamify-6.jpg" alt="Search"/>
       </li>
     </ul>
   </div>
@@ -58,7 +58,7 @@ layout: project
 <section id="cookiejar" class="project">
   <header><h1>CookieJar</h1></header>
   <article>
-    <p>Cookie Jar is a ToDo Manager, which helps users keep track of the upcoming events/school deadlines/tasks. The product’s audience is savvy computer users who prefer working only with keyboard. It supports flexible input commands from the user. For example, users can type “add having a meeting next Friday afternoon” into the command bar; then the program will understand and add the correct event into its database. Other functionalities like smart searching or editing an event are also supported. 
+    <p>Cookie Jar is a ToDo Manager, which helps users keep track of the upcoming events/school deadlines/tasks. The product’s audience is savvy computer users who prefer working only with keyboard. It supports flexible input commands from the user. For example, users can type “add having a meeting next Friday afternoon” into the command bar; then the program will understand and add the correct event into its database. Other functionalities like smart searching or editing an event are also supported. My first software engineering project.
     </p>
   </article>
   <aside class="tech">Tech: <span class="label label-info">Java</span>
