Add nutty ninjas

--- a/projects/index.html
+++ b/projects/index.html
@@ -9,6 +9,35 @@ layout: project
   });
 </script>
 
+<section id="nuttyninjas" class="project">
+  <header><h1>Nutty Ninjas</h1></header>
+  <article>
+    <p><a href="http://www.nuttyninjas.com/">Nutty Ninjas</a> is a fun 2D-shooting game with ninja theme where friends in the same room can compete with each other right inside the browser. People use their smartphones as game controllers to control their ninjas and roll on killing with multiple choices of weapons!</br>
+    The game is built upon our open source library <a href="http://una-org.github.io/">Una</a>
+    </p>
+  </article>
+  <aside class="tech">Tech: <span class="label label-info">Javascript</span>
+                            <span class="label label-info">Node.js</span>
+                            <span class="label label-info">Socket.io</span>
+  </aside>
+  <div class="flexslider">
+    <ul class="slides">
+      <li>
+        <img src="/img/nuttyninjas-1.jpg" alt="Nutty Ninjas Loading Screen"/>
+      </li>
+       <li>
+        <img src="/img/nuttyninjas-2.jpg" alt="Map 1"/>
+      </li>
+       <li>
+        <img src="/img/nuttyninjas-3.jpg" alt="Map 2"/>
+      </li>
+       <li>
+        <img src="/img/nuttyninjas-5.jpg" alt="Controller 2"/>
+      </li>
+    </ul>
+  </div>
+</section>
+
 <section id="appman" class="project">
   <header><h1>AppMan</h1></header>
   <article>
