--- a/projects/index.html
+++ b/projects/index.html
@@ -12,7 +12,7 @@ layout: project
 <section id="nuttyninjas" class="project">
   <header><h1>Nutty Ninjas</h1></header>
   <article>
-    <p><a href="http://www.nuttyninjas.com/">Nutty Ninjas</a> is a fun 2D-shooting game with ninja theme where friends in the same room can compete with each other right inside the browser. People use their smartphones as game controllers to control their ninjas and roll on killing with multiple choices of weapons!</br>
+    <p><a href="http://ninja.comp.nus.edu.sg/">Nutty Ninjas</a> is a fun 2D-shooting game with ninja theme where friends in the same room can compete with each other right inside the browser. People use their smartphones as game controllers to control their ninjas and roll on killing with multiple choices of weapons!</br>
     The game is built upon our open source library <a href="http://una-org.github.io/">Una</a>
     </p>
   </article>
